Fixed the work page on mobile

--- a/css/pages/work.css
+++ b/css/pages/work.css
@@ -69,10 +69,11 @@
     position: relative;
     padding-top: 0;
     z-index: 101;
-    margin-top: 40vh;
+    margin-top: 35vh;
     margin-left: 50px;
     margin-right: 50px;
   }
+
   .text-links {
     width: 100px;
   }
